syntax = "proto3";
package proto;

import "stmt.proto";

// end of result stream marker
message StreamEnd {}

// stream errors
message StreamError {
  string error = 1;
}

// /mediachain/node/id
message NodeInfoRequest {}

message NodeInfo {
  string peer = 1;
  string publisher = 2;
  string info = 3;
}

// /mediachain/node/ping
message Ping {}
message Pong {}

// /mediachain/node/query
message QueryRequest {
  string query = 1;
}

message QueryResult {
  oneof result {
    QueryResultValue value = 1;
    StreamEnd end = 2;
    StreamError error = 3;
  }
}

message QueryResultValue {
  oneof value {
    SimpleValue simple = 1;
    CompoundValue compound = 2;
  }
}

message SimpleValue {
  oneof value {
    int64 intValue = 1;
    string stringValue = 2;
    Statement stmt = 3;
    StatementBody stmtBody = 4;
  }
}

message CompoundValue {
  repeated KeyValuePair body = 1;
}

message KeyValuePair {
  string key = 1;
  SimpleValue value = 2;
}

// /mediachain/node/data
message DataRequest {
  repeated string keys = 1;
}

message DataResult {
  oneof result {
    DataObject data = 1;
    StreamEnd end = 2;
    StreamError error = 3;
  }
}

message DataObject {
  string key = 1;
  bytes data = 2;
}
